// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.tags allowClear renders correctly 1`] = `
<div
  id="TriggerContainer"
>
  <div
    class="rc-select rc-select-enabled rc-select-allow-clear"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="rc-select-selection
                rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="rc-select-selection__clear"
        style="user-select:none;-webkit-user-select:none;display:none;"
        unselectable="unselectable"
      />
    </div>
  </div>
</div>
`;

exports[`Select.tags render render animation 1`] = `
<SelectTrigger
  defaultActiveFirstOption={true}
  dropdownMatchSelectWidth={true}
  dropdownMenuStyle={Object {}}
  dropdownStyle={Object {}}
  inputValue=""
  multiple={true}
  onDropdownVisibleChange={[Function]}
  onMenuDeselect={[Function]}
  onMenuSelect={[Function]}
  onPopupFocus={[Function]}
  options={Array []}
  prefixCls="rc-select"
  showSearch={true}
  value={Array []}
  visible={false}
>
  <div
    className="rc-select rc-select-enabled"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup="true"
      className="rc-select-selection
                rc-select-selection--multiple"
      role="combobox"
    >
      <div
        className="rc-select-selection__rendered"
      >
        <Animate
          animation={Object {}}
          component="ul"
          componentProps={Object {}}
          onAppear={[Function]}
          onEnd={[Function]}
          onEnter={[Function]}
          onLeave={[Function]}
          transitionAppear={false}
          transitionEnter={true}
          transitionLeave={true}
          transitionName="slide-up"
        >
          <li
            className="rc-select-search rc-select-search--inline"
          >
            <div
              className="rc-select-search__field__wrap"
            >
              <input
                className="rc-select-search__field"
                onChange={[Function]}
                onKeyDown={[Function]}
                value=""
              />
              <span
                className="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </Animate>
      </div>
    </div>
  </div>
</SelectTrigger>
`;

exports[`Select.tags render truncates tags by maxTagCount 1`] = `
<div
  id="TriggerContainer"
>
  <div
    class="rc-select rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="rc-select-selection
                rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none;"
            title="one"
            unselectable="unselectable"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              one
            </div>
            <span
              class="rc-select-selection__choice__remove"
            />
          </li>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none;"
            title="two"
            unselectable="unselectable"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              two
            </div>
            <span
              class="rc-select-selection__choice__remove"
            />
          </li>
          <li
            class="rc-select-selection__choice rc-select-selection__choice__disabled"
            style="user-select:none;-webkit-user-select:none;"
            title="+ 1 ..."
            unselectable="unselectable"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              + 1 ...
            </div>
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.tags render truncates values by maxTagTextLength 1`] = `
<div
  id="TriggerContainer"
>
  <div
    class="rc-select rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="rc-select-selection
                rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none;"
            title="one"
            unselectable="unselectable"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              on...
            </div>
            <span
              class="rc-select-selection__choice__remove"
            />
          </li>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none;"
            title="two"
            unselectable="unselectable"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              tw...
            </div>
            <span
              class="rc-select-selection__choice__remove"
            />
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.tags renders search value when not found 1`] = `
<div
  id="TriggerContainer"
>
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
                rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none;"
            title="22"
            unselectable="unselectable"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              22
            </div>
            <span
              class="rc-select-selection__choice__remove"
            />
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto;"
      >
        <ul
          aria-activedescendant=""
          class="rc-select-dropdown-menu rc-select-dropdown-menu-vertical  rc-select-dropdown-menu-root"
          role="menu"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="menuitem"
            style="user-select:none;-webkit-user-select:none;"
            unselectable="unselectable"
          >
            1
          </li>
          <li
            aria-selected="true"
            class="rc-select-dropdown-menu-item-active rc-select-dropdown-menu-item-selected rc-select-dropdown-menu-item"
            role="menuitem"
            style="user-select:none;-webkit-user-select:none;"
            unselectable="unselectable"
          >
            22
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.tags renders unlisted item in value 1`] = `
<div
  id="TriggerContainer"
>
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
                rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none;"
            title="3"
            unselectable="unselectable"
          >
            <div
              class="rc-select-selection__choice__content"
            >
              3
            </div>
            <span
              class="rc-select-selection__choice__remove"
            />
          </li>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto;"
      >
        <ul
          aria-activedescendant=""
          class="rc-select-dropdown-menu rc-select-dropdown-menu-vertical  rc-select-dropdown-menu-root"
          role="menu"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="menuitem"
            style="user-select:none;-webkit-user-select:none;"
            unselectable="unselectable"
          >
            1
          </li>
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item"
            role="menuitem"
            style="user-select:none;-webkit-user-select:none;"
            unselectable="unselectable"
          >
            2
          </li>
          <li
            aria-selected="true"
            class="rc-select-dropdown-menu-item-active rc-select-dropdown-menu-item-selected rc-select-dropdown-menu-item"
            role="menuitem"
            style="user-select:none;-webkit-user-select:none;"
            unselectable="unselectable"
          >
            3
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.tags use filterOption 1`] = `
<div
  id="TriggerContainer"
>
  <div
    class="rc-select rc-select-open rc-select-focused rc-select-enabled"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="true"
      aria-haspopup="true"
      class="rc-select-selection
                rc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="rc-select-selection__rendered"
      >
        <ul>
          <li
            class="rc-select-search rc-select-search--inline"
          >
            <div
              class="rc-select-search__field__wrap"
            >
              <input
                class="rc-select-search__field"
                value=""
              />
              <span
                class="rc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <div
      class="rc-select-dropdown rc-select-dropdown--multiple rc-select-dropdown-placement-bottomLeft "
    >
      <div
        style="overflow:auto;"
      >
        <ul
          aria-activedescendant=""
          class="rc-select-dropdown-menu rc-select-dropdown-menu-vertical  rc-select-dropdown-menu-root"
          role="menu"
        >
          <li
            aria-selected="false"
            class="rc-select-dropdown-menu-item-active rc-select-dropdown-menu-item"
            role="menuitem"
            style="user-select:none;-webkit-user-select:none;"
            unselectable="unselectable"
          >
            Red
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
